apps/llama/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supervisord
  namespace: llama
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: llama-swap
  template:
    metadata:
      labels:
        app: llama-swap
    spec:
      containers:
        - name: supervisord
          image: gitea.lumpiasty.xyz/lumpiasty/supervisord:latest@sha256:29e75b57c371bf269646b31169975d03bd75f0d9d63eb09e3748e5e262eaa19e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          volumeMounts:
            - name: models
              mountPath: /root
            - mountPath: /dev/kfd
              name: kfd
            - mountPath: /dev/dri
              name: dri
          securityContext:
            privileged: true
      volumes:
        - name: models
          persistentVolumeClaim:
            claimName: llama-models-lvmssd
        - name: kfd
          hostPath:
            path: /dev/kfd
            type: CharDevice
        - name: dri
          hostPath:
            path: /dev/dri
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: llama
  namespace: llama
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 11434
      targetPort: 8080
      protocol: TCP
  selector:
    app: llama-swap
